Colour pallete update

--- a/Color pallete generator/style.css
+++ b/Color pallete generator/style.css
@@ -1,10 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap');
+
 :root{
-    --primary: #d81e5d;
+    --primary: #1e3ad8bd;
     --secondary: #8a4fff;
-    --light: #eee;
-    --gray: #aaa;
+    --light: #e0e0e0;
+    --gray: #7c7c7c;
     --dark: #1e2f42;
 }
+body::-webkit-scrollbar {
+    width: .3em;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: var(--dark);
+    border-radius: 50px;
+  }
 *{
     box-sizing: border-box;
     margin: 0;
@@ -28,21 +42,59 @@ body{
     background: var(--light);
 }
 main{
-    padding: 4rem 2rem;
+    /* padding: 4rem 2rem; */
     max-width: 1200px;
     margin: 0 auto;
+    margin-top: 1rem;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    margin-top: -1rem;
+}
+.log{
+    display: flex;
+}
+.logo{
+    font-size: 2rem;
+}
+.logimg{
+    width: 40px;
+    height: 40px;
+    margin-top: 1.6rem;
+}
+.github{
+    display: flex;
+    margin-right: 2%;
+    align-items: flex-end;
+    height: 50px;
+    margin-top: 2rem;
+    justify-content: flex-end;
+}
+.github img{
+    width: 75px;
 }
 h1{
+    margin-top: 1rem;
     color: var(--dark);
-    font-size: 2.5rem;
+    font-size: 35px;
+    line-height: 1.2;
     font-weight: 500;
-    text-transform: uppercase;
     margin-bottom: 1rem;
+    padding: 1rem;
+    font-family: 'Josefin Sans', sans-serif;
 }
 p{
     color: var(--gray);
-    font-size: 1.122rem;
+    font-size: 1rem;
     margin-bottom: 2rem;
+    padding: 1rem;
+}
+.copy-hex{
+    font-size: 16px;
+    color: black;
+    font-weight: 700;
+    opacity: 0.5;
 }
 .generator-button{
     color: rgb(6, 41, 105);
@@ -65,24 +117,34 @@ h4{
     font-size: 1.5rem;
 }
 .colours{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40%;
 }
 .colour{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5rem 1rem;
+    padding: 1.5rem;
     border-radius: 1rem;
     background-color: var(--dark);
-    color: #fff; 
+    color: #e0e0e0; 
     border: 2px solid transparent;
     transition: 0.4s ease-out;
+    height: 150px;
+    width: 250px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
-.colour.copied{
-    border-color: red;
+.colour:hover{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
+/* .colour.copied{
+    border-color: rgba(4, 16, 119, 0.932);
+} */
 .lock-toggle{
     opacity: 0.5;
     transition: 0.4s;
@@ -92,24 +154,18 @@ h4{
 }
 .colour-input{
     text-align: center;
+    width: 75px;
+    font-size: 16px;
+    color: black;
+    font-weight: 700;
+    opacity: 0.5;
 }
 @media(min-width: 768px){
-    .colours{
-        grid-template-columns: repeat(2, 1fr);
-    }    
     h1{
         font-size: 4rem;
     }
 }
 @media(min-width: 1024px){
-    .colours{
-        grid-template-columns: repeat(4, 1fr);
-    }
-    .colour{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
     .colour-input{
         margin-top: 1rem;
         margin-bottom: 1rem;
